[gd_scene load_steps=30 format=2]

[ext_resource path="res://GameBoard.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Spritesheets/diceWhite.png" type="Texture" id=3]
[ext_resource path="res://Game.gd" type="Script" id=4]
[ext_resource path="res://assets/Bonus/dieThrow1.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/Coin/goldcoin-frame5.png" type="Texture" id=6]
[ext_resource path="res://assets/Coin/goldcoin-frame2.png" type="Texture" id=7]
[ext_resource path="res://assets/Coin/goldcoin-frame6.png" type="Texture" id=8]
[ext_resource path="res://assets/Coin/goldcoin-frame3.png" type="Texture" id=9]
[ext_resource path="res://assets/Coin/goldcoin-frame1.png" type="Texture" id=10]
[ext_resource path="res://assets/Coin/goldcoin-frame4.png" type="Texture" id=11]
[ext_resource path="res://assets/audio/Blackmoor Tides Loop.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/Cards/High-Tide.png" type="Texture" id=13]
[ext_resource path="res://assets/Cards/Low-Tide.png" type="Texture" id=14]
[ext_resource path="res://assets/ArchitectsDaughter-Regular.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://assets/photo-rock.jpg" type="Texture" id=16]
[ext_resource path="res://assets/Coin/goldcoin-frame1-tails.png" type="Texture" id=17]
[ext_resource path="res://assets/Coin/goldcoin-frame1-heads.png" type="Texture" id=18]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 15 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 17 ), ExtResource( 17 ), ExtResource( 17 ), ExtResource( 17 ), ExtResource( 17 ), ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Treasure Island" type="Node"]

[node name="Game" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="GameBoard" parent="Game" instance=ExtResource( 1 )]

[node name="Player" parent="Game" instance=ExtResource( 2 )]
position = Vector2( 16.6865, 68.3354 )

[node name="Player2" parent="Game" instance=ExtResource( 2 )]
position = Vector2( 48.6738, 68.7863 )
player = 1

[node name="Player3" parent="Game" instance=ExtResource( 2 )]
position = Vector2( 15.1882, 109.261 )
player = 2

[node name="Player4" parent="Game" instance=ExtResource( 2 )]
position = Vector2( 48.4571, 109.963 )
player = 3

[node name="HUD" type="CanvasLayer" parent="Game"]

[node name="TurnScreen" type="TextureRect" parent="Game/HUD"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -5.0
margin_top = -2.0
margin_right = 1.0
margin_bottom = -2.0
texture = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Game/HUD/TurnScreen"]
margin_left = 330.939
margin_top = 278.112
margin_right = 673.939
margin_bottom = 323.112
custom_fonts/font = SubResource( 1 )
text = "Time to switch Players"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwitchTurnButton" type="Button" parent="Game/HUD/TurnScreen/Label"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.0562
margin_top = 18.5178
margin_right = 20.9438
margin_bottom = 38.5178
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hbox" type="HBoxContainer" parent="Game/HUD"]
margin_right = 130.0
margin_bottom = 45.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpaceLabel" type="Label" parent="Game/HUD/Hbox"]
margin_top = 15.0
margin_bottom = 29.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndButton" type="Button" parent="Game/HUD/Hbox"]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = 4.0
margin_right = 82.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 10 )
text = "End Turn"
__meta__ = {
"_editor_description_": ""
}

[node name="DiceButton" type="Button" parent="Game/HUD/Hbox"]
modulate = Color( 1, 0.415686, 1, 1 )
margin_left = 4.0
margin_right = 79.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 10 )
text = "Roll Dice"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="PlayerLabel" type="Label" parent="Game/HUD/Hbox"]
margin_left = 83.0
margin_top = 15.0
margin_right = 83.0
margin_bottom = 29.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dice" type="AnimatedSprite" parent="Game/HUD/Hbox"]
position = Vector2( 246.849, 24.2122 )
scale = Vector2( 0.708939, 0.688449 )
frames = SubResource( 8 )

[node name="DiceNoise" type="AudioStreamPlayer2D" parent="Game/HUD/Hbox"]
position = Vector2( 1.90735e-06, 1.90735e-06 )
stream = ExtResource( 5 )

[node name="TideBtn" type="Button" parent="Game/HUD"]
modulate = Color( 0.415686, 0.933333, 1, 1 )
margin_left = 361.309
margin_top = -0.244923
margin_right = 474.309
margin_bottom = 44.7551
custom_fonts/font = SubResource( 10 )
text = "Pull Tide Card"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="CoinFlipBtn" type="Button" parent="Game/HUD"]
modulate = Color( 1, 0.937255, 0.415686, 1 )
margin_left = 277.2
margin_right = 352.2
margin_bottom = 45.0
custom_fonts/font = SubResource( 10 )
text = "Coin Flip"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Heads" type="AnimatedSprite" parent="Game/HUD/CoinFlipBtn"]
position = Vector2( 243.656, 22.6662 )
scale = Vector2( 0.860636, 0.51743 )
frames = SubResource( 9 )
frame = 9
speed_scale = 0.5
playing = true

[node name="Tails" type="AnimatedSprite" parent="Game/HUD/CoinFlipBtn"]
position = Vector2( 242.538, 22.6274 )
scale = Vector2( 0.867418, 0.508954 )
frames = SubResource( 11 )
frame = 6
speed_scale = 0.5
playing = true

[node name="LowCard" type="Sprite" parent="Game/HUD"]
visible = false
position = Vector2( 693.272, 286.196 )
scale = Vector2( 0.40136, 0.340145 )
texture = ExtResource( 14 )

[node name="LowLabel" type="Label" parent="Game/HUD/LowCard"]
margin_left = -130.0
margin_top = -91.0
margin_right = -20.0
margin_bottom = -42.0
custom_fonts/font = SubResource( 1 )
text = "SPACE:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighCard" type="Sprite" parent="Game/HUD"]
visible = false
position = Vector2( 317.645, 287.821 )
scale = Vector2( 0.379638, 0.339813 )
texture = ExtResource( 13 )

[node name="HighLabel" type="Label" parent="Game/HUD/HighCard"]
margin_left = -168.0
margin_top = 76.0
margin_right = -110.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 1 )
text = "MOVE: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackmoorSong" type="AudioStreamPlayer2D" parent="Game"]
stream = ExtResource( 12 )
volume_db = -4.038

[node name="DiceTimer" type="Timer" parent="Game"]
wait_time = 0.5
one_shot = true
[connection signal="pressed" from="Game/HUD/TurnScreen/Label/SwitchTurnButton" to="Game" method="_on_SwitchTurnButton_pressed"]
[connection signal="pressed" from="Game/HUD/Hbox/EndButton" to="Game" method="_on_EndButton_pressed"]
[connection signal="pressed" from="Game/HUD/Hbox/DiceButton" to="Game" method="_on_DiceButton_pressed"]
[connection signal="pressed" from="Game/HUD/TideBtn" to="Game/Player" method="_on_TideBtn_pressed"]
[connection signal="pressed" from="Game/HUD/CoinFlipBtn" to="Game/Player" method="_on_CoinFlipBtn_pressed"]
[connection signal="timeout" from="Game/DiceTimer" to="Game" method="_on_DiceTimer_timeout"]
